--- a/packages/fyvue/src/klb/index.scss
+++ b/packages/fyvue/src/klb/index.scss
@@ -82,6 +82,14 @@ html, body {
     }
   }
 }
+.btn {
+  &.big {
+    @apply text-2xl px-5 py-1.5;
+  }
+  &.small {
+    @apply text-sm;
+  }
+}
 // End fyvue < 0.2.x
 
 .fyui-nav__wrapper {
